[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/SpaceInvader.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemie1.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[node name="Enemie1" type="Area2D"]
position = Vector2( 289, 17 )
z_index = 1
collision_layer = 2147483650
script = ExtResource( 2 )

[node name="EnemieSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EnemieMuzzle" type="Position2D" parent="."]
position = Vector2( 0, 15 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="Tempo" type="Timer" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Enemie1_area_entered"]
[connection signal="timeout" from="Tempo" to="." method="_on_Timer_timeout"]
